--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.button {
+		@apply font-bold py-2 px-4 rounded cursor-pointer
+	}
+	.button.primary {
+		@apply bg-blue-500 text-white
+	}
+	.button.secondary {
+		@apply bg-gray-500 text-white
+	}
+}
