--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -1,3 +1,4 @@
 <main>
 	<h1 class="text-3xl font-bold underline text-blue-500">main page</h1>
+	<button class="button uppercase secondary">button</button>
 </main>
