--- a/src/templates/create-account.ejs
+++ b/src/templates/create-account.ejs
@@ -1,5 +1,20 @@
-<main>
-	<div class="w-full max-w-xl">
+<main class="w-full flex flex-col items-center">
+	<div class="w-full max-w-xl flex flex-col items-center">
 		<h1 class="text-3xl font-bold">Create Account</h1>
+		<div class="w-full flex flex-col items-center">
+			<form hx-post="/create-account" class="w-4/5">
+				<div class="flex flex-col mb-4">
+					<label class="mb-2 font-bold text-lg" for="name">Name</label>
+					<input class="border rounded" id="name" name="name" type="text" value="main"/>
+				</div>
+				<div class="flex flex-col mb-4">
+					<label class="mb-2 font-bold text-lg" for="balance">Balance</label>
+					<input class="border rounded" id="balance" name="balance" type="number" value="0" />
+				</div>
+				<div class="flex flex-col mb-4">
+					<button class="button primary" type="submit">Create</button>
+				</div>
+			</form>
+		</div>
 	</div>
 </main>
