--- a/src/templates/create-account.ejs
+++ b/src/templates/create-account.ejs
@@ -2,10 +2,10 @@
 	<div class="w-full max-w-xl flex flex-col items-center">
 		<h1 class="text-3xl font-bold">Create Account</h1>
 		<div class="w-full flex flex-col items-center">
-			<form hx-post="/create-account" class="w-4/5">
+			<form hx-post="/account/create" class="w-4/5">
 				<div class="flex flex-col mb-4">
 					<label class="mb-2 font-bold text-lg" for="name">Name</label>
-					<input class="border rounded" id="name" name="name" type="text" value="main"/>
+					<input class="border rounded" id="name" name="name" type="text" value="<%= defaultName%>"/>
 				</div>
 				<div class="flex flex-col mb-4">
 					<label class="mb-2 font-bold text-lg" for="balance">Balance</label>
