--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -1,6 +1,20 @@
 <main class="w-full flex flex-col items-center">
 	<div class="w-full max-w-xl">
-		Balance: <%= account.balance %>
+		<h3 class="text-xl mb-3 font-bold">Balance: R$<%= (account.balance / 100).toFixed(2) %></h3>
+		<div id="budget-list">
+			<h2 class="text-xl font-bold">Budgets:</h2>
+			<div class="grid grid-cols-5 font-bold">
+				<h3 class="col-span-3 font-semibold">Name</h3>
+				<h3 class="col-span-2 font-semibold">Balance</h3>
+			</div>
+			<%for (const b of budgets) {%>
+				<div class="grid grid-cols-5">
+					<h3 class="col-span-3"><%= b.name %></h3>
+					<h3 class="col-span-2">R$<%= (b.amount / 100).toFixed(2)%></h3>
+				</div>
+			<%}%>
+			<button id="btn-new-budget" class="button primary">New budget</button>
+		</div>
 	</div>
 	<form class="hidden" id="form-transfer" hx-post="/transfer">
 		<div class="w-full max-w-xl">
