show all accounts and budgets on transfer form

--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -22,15 +22,26 @@
 			<input id="amount" name="amount" type="number" min="1" class="w-full px-3 py-1 rounded-md border-slate-300 border-2 focus:border-blue-200 outline-none" />
 		</div>
 		<div class="w-full max-w-xl">
-			<label for="fromId" class="text-slate-700">From account</label>
+			<label for="fromId" class="text-slate-700">From</label>
 			<select name="fromId" id="fromId" value="<%= account.id %>" class="w-full px-3 py-1 rounded-md border-slate-300 border-2 focus:border-blue-200 outline-none">
-				<option value="<%= account.id %>" selected><%= account.name %></option>
+				<%for (const a of accounts) {%>
+					<option value="<%= a.id %>" <%= a.id === account.id ? 'selected' : ''%>>ACC: <%= a.name %></option>
+				<%}%>
+				<%for (const b of budgets) {%>
+					<option value="<%= b.id %>">BGT: <%= b.name %></option>
+				<%}%>
 			</select>
 		</div>
 		<div class="w-full max-w-xl">
-			<label for="toId" class="text-slate-700">To account</label>
-			<select name="toId" id="toId" value="<%= account.id %>" class="w-full px-3 py-1 rounded-md border-slate-300 border-2 focus:border-blue-200 outline-none">
-				<option value="<%= account.id %>" selected><%= account.name %></option>
+			<label for="toId" class="text-slate-700">To</label>
+			<select name="toId" id="toId" value="" class="w-full px-3 py-1 rounded-md border-slate-300 border-2 focus:border-blue-200 outline-none">
+				<option value="" selected disabled>Select</option>
+				<%for (const b of budgets){%>
+					<option value="<%= b.id %>">BGT: <%= b.name %></option>
+				<%}%>
+				<%for (const a of accounts.filter(x => x.id !== account.id)){%>
+					<option value="<%= a.id %>">ACC: <%= a.name %></option>
+				<%}%>
 			</select>
 		</div>
 		<button type="submit" class="w-full max-w-xl rounded-md bg-blue-500 text-white px-3 py-1">Transfer</button>
