--- a/src/templates/index.ejs
+++ b/src/templates/index.ejs
@@ -50,25 +50,27 @@
 		</form>
 	</div>
 	
-	<form id="form-expense" hx-post="/expense" class="hidden">
-		<div class="w-full max-w-xl mb-4">
-			<label for="amount" class="text-slate-700">Amount in cents</label>
-			<input id="amount" name="amount" type="number" min="1" class="w-full px-3 py-1 rounded-md border-slate-300 border-2 focus:border-blue-200 outline-none" />
-		</div>
-		<div class="w-full max-w-xl mb-4">
-			<label for="target" class="text-slate-700">Target</label>
-			
-			<select name="target" id="target" value="<%= account.id %>" class="w-full px-3 py-1 rounded-md border-slate-300 border-2 focus:border-blue-200 outline-none">
-				<%for (const a of accounts) {%>
-					<option value="<%= a.id %>" <%= a.id === account.id ? 'selected' : ''%>>ACC: <%= a.name %></option>
-				<%}%>
-				<%for (const b of budgets) {%>
-					<option value="<%= b.id %>">BGT: <%= b.name %></option>
-				<%}%>
-			</select>
-		</div>
-		<button type="submit" class="w-full max-w-xl rounded-md bg-blue-500 text-white px-3 py-1">Expense</button>
-	</form>
+	<div id="form-expense" class="hidden w-full h-screen flex-col justify-center items-center">
+		<form  hx-post="/expense" class="w-5/6 bg-gray-100 rounded-lg p-5">
+			<div class="w-full max-w-xl mb-4">
+				<label for="amount" class="text-slate-700">Amount in cents</label>
+				<input id="amount" name="amount" type="number" min="1" class="w-full px-3 py-1 rounded-md border-slate-300 border-2 focus:border-blue-200 outline-none" />
+			</div>
+			<div class="w-full max-w-xl mb-4">
+				<label for="target" class="text-slate-700">Target</label>
+				
+				<select name="target" id="target" value="<%= account.id %>" class="w-full px-3 py-1 rounded-md border-slate-300 border-2 focus:border-blue-200 outline-none">
+					<%for (const a of accounts) {%>
+						<option value="<%= a.id %>" <%= a.id === account.id ? 'selected' : ''%>>ACC: <%= a.name %></option>
+					<%}%>
+					<%for (const b of budgets) {%>
+						<option value="<%= b.id %>">BGT: <%= b.name %></option>
+					<%}%>
+				</select>
+			</div>
+			<button type="submit" class="w-full max-w-xl rounded-md bg-blue-500 text-white px-3 py-1">Expense</button>
+		</form>
+	</div>
 	<button id="btn-transact" class="transition-all duration-100 rounded-full bg-slate-500 size-12 absolute right-5 bottom-5 flex flex-col items-center justify-center text-3xl font-bold cursor-pointer z-20">+</button>
 	
 	<button id="btn-income" class="ease-in-out transition-all duration-100 -z-10 rounded-full bg-green-500 size-12 absolute right-5 bottom-5 flex flex-col items-center justify-center cursor-pointer"><svg style="max-width: 80%;" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title></title> <g id="Complete"> <g id="arrow-up-right"> <g> <polyline data-name="Right" fill="none" id="Right-2" points="18.7 12.4 18.7 5.3 11.6 5.3" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></polyline> <line fill="none" stroke="#000000" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="5.3" x2="17.1" y1="18.7" y2="6.9"></line> </g> </g> </g> </g></svg></button>
